--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "framework-espidf",
-  "version": "3.50500",
+  "version": "3.50500+rc1",
   "description": "Espressif IoT Development Framework",
   "keywords": [
     "framework",
